# drf-play

./: .gitlab-ci.yml  .pre-commit-config.yaml  GitVersion.yml  README.md  docker-compose.yml  pyproject.toml  start_docker.sh  tox.ini
config/: .env.template
docker/: docker-compose.prod.yml
docker/django/: Dockerfile
scripts/: create_dev_database.sql
server/: urls.py
server/apps/api/books/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/apps/api/books/migrations/: 0001_initial.py
server/settings/components/: common.py
server/settings/environments/: development.py
server/templates/txt/: humans.txt
